--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,22 @@
 node_modules
+# Dependencies
+node_modules/
+
+# Build outputs
+.next/
+dist/
+.turbo/
+
+# Env files
+.env
+.env.*
+packages/db/.env
+apps/api/.env
+
+# Local Node binary
+node-v24.13.1-win-x64/
+node-v24.13.1-win-x64.zip
+
+# Temp files
+*.tmp
+~*
