Fix workflow yaml indentation

--- a/.github/workflows/db-push.yml
+++ b/.github/workflows/db-push.yml
@@ -15,11 +15,11 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: 'pnpm'
+          cache: pnpm
 
       - run: pnpm install
 
-        - name: Run Prisma DB Push
+      - name: Run Prisma DB Push
         env:
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
           DIRECT_DATABASE_URL: ${{ secrets.DIRECT_DATABASE_URL }}
